feat: crud product
